--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Majestic unicorn with hair blowing in the wind</h1>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		   by finley caulfield
 	    </footer>
 	</body>
 </html>
